# ecommerce-microservices

./: .gitignore  README.md  docker-compose.yml  requirements.txt
server/services/order-service/: Dockerfile  pyproject.toml  requirements.txt
server/services/order-service/alembic/: env.py
server/services/order-service/alembic/versions/: 2f74e7fae96d_add_shipping_fields.py  6cb9608babed_initial_database_setup.py
server/services/order-service/app/: main.py
server/services/order-service/app/core/: http_client.py
server/services/order-service/app/db/: database.py
server/services/order-service/app/model/: order.py
server/services/order-service/app/route/: order_route.py
server/services/order-service/app/schema/: order.py
server/services/order-service/app/services/: cart_client.py  order_service.py  payment_client.py  product_client.py
server/services/payment-service/: .env.example  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
server/services/payment-service/alembic/: env.py
server/services/payment-service/alembic/versions/: 001_initial_payment_schema.py  063394831895_create_payment_table.py  2b70188343a5_update_code.py  9a36c83143f4_add_discount_code_to_orders.py  efe6ca96cc41_create_payment_table.py
server/services/payment-service/app/: main.py
server/services/payment-service/app/api/: payment_route.py
server/services/payment-service/app/core/: cashfree.py  config.py  database.py  http_client.py  redis.py
server/services/payment-service/app/db/: database.py  db.py
server/services/payment-service/app/model/: payment.py
server/services/payment-service/app/models/: payment_model.py
server/services/payment-service/app/route/: payment_route.py
server/services/payment-service/app/schema/: payment.py  payment_schama.py
server/services/payment-service/app/schemas/: payment_schema.py
server/services/payment-service/app/services/: cashfree_service.py  dodo_service.py  order_client.py  webhook_service.py
server/services/payment-service/prisma/: schema.prisma
server/services/payment-service/src/: server.ts
server/services/payment-service/src/config/: cashfree.ts
server/services/payment-service/src/controllers/: payment.controller.ts
server/services/payment-service/src/routes/: payment.routes.ts
server/services/payment-service/src/services/: payment.service.ts
server/services/payment-service/src/utils/: httpClient.ts
server/services/product-service/: Dockerfile  pyproject.toml  requirements.txt
server/services/product-service/alembic/: env.py
server/services/product-service/app/: main.py
server/services/user-service/: Dockerfile  pyproject.toml  requirements.txt
server/services/user-service/app/: main.py
server/services/user-service/migrations/: env.py
(+139 files in other folders)
