[project]
name = "payment-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dodopayments>=1.105.0",
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
