[project]
name = "payment-service"
version = "0.1.0"
description = "Payment service with Cashfree integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0.0",
    "python-dotenv>=0.9.9",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.49.0",
]
