[project]
name = "product-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "cloudinary>=1.44.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
